parent 只有要一個 overflow hidden    -> child 就舞法使用 position sticky parent 只要有一哥 trnasform translate(0px,0px)        -> child 就無法使用 position  fixed

--- a/src/assets/scss/view/designerInfo.scss
+++ b/src/assets/scss/view/designerInfo.scss
@@ -4,11 +4,13 @@
     padding: 50px ;
     >div{
         max-width: 1500px;
-        min-height: 1000px;
+        min-height: 2000px;
         border: 1px solid red;
         margin: auto;
         display: flex;
-        position: relative;
+        overflow: visible;
+        align-items: flex-start;
+        // position: relative;
 
 
         .IntroContainer{
@@ -16,8 +18,9 @@
             display: flex;
             padding: 15px;
             width: 32%;
-            height: 82vh;
-            overflow-y: auto;
+            height: 500px;
+            // overflow-y: auto;
+            border: 1px solid green;
 
             position: sticky;
             top: 50px;
@@ -66,11 +69,12 @@
                 }
             }
         }
+
         .prodItemsContainer {
             width: 68%;
             // height: fit-content;
-
         }
     }    
+
 }
 
